[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipchorus"
version = "0.1.0"
description = "Live per-IP network monitor for the terminal — sortable in/out traffic with reverse DNS and WHOIS context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aganet" }]
keywords = [
    "network",
    "monitor",
    "tui",
    "terminal",
    "tcpdump",
    "pcap",
    "scapy",
    "whois",
    "rdap",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "scapy>=2.5",
    "psutil>=5.9",
    "textual>=0.60",
    "ipwhois>=1.2",
    "geoip2>=4.7",
]

[project.urls]
Homepage      = "https://github.com/aganet/ipchorus"
Repository    = "https://github.com/aganet/ipchorus"
Issues        = "https://github.com/aganet/ipchorus/issues"
Changelog     = "https://github.com/aganet/ipchorus/releases"

[project.scripts]
ipchorus = "ipchorus:main"

[tool.setuptools]
py-modules = ["ipchorus"]
